; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_ucycom.c_ucycom_free_softc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_ucycom.c_ucycom_free_softc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucycom_softc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ucycom_softc*)* @ucycom_free_softc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ucycom_free_softc(%struct.ucycom_softc* %0) #0 {
  %2 = alloca %struct.ucycom_softc*, align 8
  store %struct.ucycom_softc* %0, %struct.ucycom_softc** %2, align 8
  %3 = load %struct.ucycom_softc*, %struct.ucycom_softc** %2, align 8
  %4 = getelementptr inbounds %struct.ucycom_softc, %struct.ucycom_softc* %3, i32 0, i32 1
  %5 = call i64 @ucom_unref(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load %struct.ucycom_softc*, %struct.ucycom_softc** %2, align 8
  %9 = getelementptr inbounds %struct.ucycom_softc, %struct.ucycom_softc* %8, i32 0, i32 0
  %10 = call i32 @mtx_destroy(i32* %9)
  %11 = load %struct.ucycom_softc*, %struct.ucycom_softc** %2, align 8
  %12 = call i32 @device_free_softc(%struct.ucycom_softc* %11)
  br label %13

13:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @ucom_unref(i32*) #1

declare dso_local i32 @mtx_destroy(i32*) #1

declare dso_local i32 @device_free_softc(%struct.ucycom_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
